--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'PR Dev Review Labeler'
-description: 'Automatically labels PRs when dev reviewers request changes, excluding QA team members'
+description: 'Automatically labels pull requests when any reviewer requests changes'
 
 branding:
   icon: 'tag'
@@ -17,21 +17,7 @@ runs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.payload.pull_request.number,
-            labels: ['dev-changes-requested']
+            labels: ['changes-requested']
           });
 
-          console.log(`Label 'dev-changes-requested' added to PR #${context.payload.pull_request.number}`);
-
-    - name: Remove label when approved
-      if: github.event.review.state == 'approved'
-      uses: actions/github-script@v7
-      with:
-        script: |
-          await github.rest.issues.removeLabel({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.payload.pull_request.number,
-            name: 'dev-changes-requested'
-          });
-
-          console.log(`Label removed from PR #${context.payload.pull_request.number}`);
+          console.log(`Label 'changes-requested' added to PR #${context.payload.pull_request.number}`);
